# example-repo

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yaml  CODEOWNERS  LICENSE  LICENSE.MIT  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  setup.sh
.github/: protect_default_branch.json  renovate.json5
.github/workflows/: checks.yaml  update_deps.yaml
