[project]
requires-python = ">=3.11"

[tool.black]
line-length = 100

[tool.codespell]
ignore-regex = "\\[nt]" # Do not count escaped newlines or tabs as part of a word
ignore-words-list = "astroid" # Dependency of pylint
quiet-level = 0 # Display all warnings
check-filenames = ""
check-hidden = ""

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
python_version = "3.11"
strict = true
warn_unreachable = true

[tool.ruff]
fix = true
line-length = 100

[tool.ruff.lint]
select = [
  "A", # flake8-builtins
  "ASYNC", # flake8-async
  "B", # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4", # flake8-comprehensions
  "CPY", # flake8-copyright (will require spdx changes)
  "D", # pydocstyle
  "DTZ", # flake8-datetimez
  "E", # pycodestyle error
  "F", # pyflakes
  "FBT", # flake8-boolean-trap
  "G", # flake8-logging-format
  "I", # isort
  "ICN", # flake8-import-conventions
  "INP", # flake8-no-pep420
  "ISC", # flake8-implicit-str-concat
  "LOG", # flake8-logging
  "N", # pep8-naming
  "PIE", # flake8-pie
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "S", # flake8-bandit (but very selective, it's very picky!)
  "T10", # flake8-debugger
  "UP", # pyupgrade
  "W", # pycodestyle warning
  "YTT", # flake8-2020
]
ignore = [
  # Do not switch to `Path.open()` because `open()` is easier to test with
  # e.g., `open(data_dir / "file_a.txt")` -> `open("test/file_b.txt")`
  "PTH123", # builtin-open (from flake8-use-pathlib)
  # TODO: Write explanation
  "S101", # assert (from flake8-bandit)
  # TODO: Write explanation
  "S311", # suspicious-non-cryptographic-random-usage (from flake8-bandit)
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.pycodestyle]
# Detect extra-long lines that Black can't handle
max-line-length = 250

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pylint.format]
# Let other tools handle line length
max-line-length = 250

[tool.pylint.imports]
# Need to either set this or stop using the `import X as X` that mypy wants
allow-reexport-from-package = true

[tool.pylint.messages_control]
# Most of these are disabled to prevent issues with dependencies being difficult to inspect
# pylint FAQ recommends disabling:
# - `wrong-import-order` when using `isort`
# - `missing-module-docstring`, `missing-class-docstring`,
#   `missing-function-docstring` when using `pydocstyle`
# Disabled `consider-using-f-string` because handled by `pyupgrade`
disable = """
R,fixme,no-member,unsupported-membership-test,unsubscriptable-object,
unsupported-assignment-operation,not-an-iterable,too-many-lines,wrong-import-order,
missing-module-docstring,missing-class-docstring,missing-function-docstring,
consider-using-f-string
"""

[tool.pylint.reports]
score = false
